fix: enhance list item styling for improved consistency and readability

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -49,13 +49,16 @@
 
 .post-content li {
   display: list-item !important;
+  margin-left: 5rem !important;
+  padding-left: 4rem !important;
+  
 }
 
 /* Blog Post List Styling */
 .post-content ul
 .post-content ol {
-  margin-left: 5vw;
-  padding-left: 4rem;
+  margin-left: 5vw !important;
+  padding-left: 4rem !important;
   list-style: initial !important;
   list-style-position: outside !important;
 }
@@ -185,8 +188,8 @@
     /* Blog Post List Styling */
   .post-content ul,
   .post-content ol {
-    margin-left: 5 rem;
-    padding-left: 4 rem;
+    margin-left: 5rem !important;
+    padding-left: 4rem !important;
     list-style: initial !important;
     list-style-position: outside !important;
   }
@@ -198,8 +201,8 @@
  }
 
  .li {
-    margin-left: 5rem;
-    padding-left: 4rem;
+    margin-left: 5rem !important;
+    padding-left: 4rem !important;
     list-style-type: disc !important;
  }
   .post-meta {
